force-app/main/default/objects/PGi_Conference__c/PGi_Conference__c.object-meta.xml
<CustomObject>
    <label>PGi Conference</label>
    <nameField>
        <label>PGi Conference ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PGi Conferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>