force-app/main/default/objects/PGi_Conference__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <label>PGi Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>