force-app/main/default/objects/PGi_Conference__c/fields/Conference_Date__c.field-meta.xml
<CustomField>
    <fullName>Conference_Date__c</fullName>
    <description>Stores the date of the Conference</description>
    <label>Conference Date</label>
    <type>Date</type>
</CustomField>