force-app/main/default/objects/PGi_Conference__c/fields/ConferenceTitle__c.field-meta.xml
<CustomField>
    <fullName>ConferenceTitle__c</fullName>
    <label>Conference Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>