force-app/main/default/objects/PGi_Conference__c/fields/ConferenceType__c.field-meta.xml
<CustomField>
    <fullName>ConferenceType__c</fullName>
    <label>Conference Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>