force-app/main/default/objects/PGi_Conference__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>