force-app/main/default/objects/PGi_Conference__c/fields/Listen_Only_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Listen_Only_Passcode__c</fullName>
    <label>Listen Only Passcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>