force-app/main/default/objects/PGi_Conference__c/fields/Marked_Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>Marked_Deleted_Date__c</fullName>
    <description>This field gets populated once the Deleted Flag field gets set to True</description>
    <label>Marked Deleted Date</label>
    <type>Date</type>
</CustomField>