force-app/main/default/objects/PGi_Conference__c/fields/Moderator_Name__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Name__c</fullName>
    <label>Moderator Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>