force-app/main/default/objects/PGi_Conference__c/fields/Moderator_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Passcode__c</fullName>
    <label>Moderator Passcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>