force-app/main/default/objects/PGi_Conference__c/fields/NOC_Location__c.field-meta.xml
<CustomField>
    <fullName>NOC_Location__c</fullName>
    <label>NOC Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>