force-app/main/default/objects/PGi_Conference__c/fields/Participant_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Participant_Passcode__c</fullName>
    <label>Participant Passcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>