force-app/main/default/objects/PGi_Conference__c/fields/PGi_Client__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Client</label>
    <referenceTo>PGi_Client__c</referenceTo>
    <relationshipLabel>PGi Conferences</relationshipLabel>
    <relationshipName>PGi_Conferences</relationshipName>
    <type>Lookup</type>
</CustomField>