force-app/main/default/objects/PGi_Conference__c/fields/Related_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Company_Name__c</fullName>
    <formula>PGi_Client__r.PGi_Company__r.Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Company Name</label>
    <type>Text</type>
</CustomField>