force-app/main/default/objects/PGi_Conference__c/recordTypes/iGloo_Conference.recordType-meta.xml
<RecordType>
    <fullName>iGloo_Conference</fullName>
    <active>true</active>
    <label>iGloo Conference</label>
</RecordType>