force-app/main/default/objects/PGi_Conference__c/recordTypes/PGi_Video_Conference.recordType-meta.xml
<RecordType>
    <fullName>PGi_Video_Conference</fullName>
    <active>false</active>
    <label>PGi Video Conference</label>
</RecordType>