force-app/main/default/objects/PGi_Conference__c/recordTypes/TESLA_Conference.recordType-meta.xml
<RecordType>
    <fullName>TESLA_Conference</fullName>
    <active>true</active>
    <label>TESLA Conference</label>
</RecordType>