force-app/main/default/objects/PGi_Conference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Bridge_Name__c</columns>
    <columns>Conference_Date__c</columns>
    <columns>ConferenceTitle__c</columns>
    <columns>ConferenceType__c</columns>
    <columns>Moderator_Name__c</columns>
    <columns>Client_ID__c</columns>
    <columns>PGi_Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>